--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
 python:
-  - "3.6"
+  - 3.6
 # command to install dependencies
 install:
   - pip install .
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - pytest # or py.test for Python versions 3.5 and below
+  - py.test # or py.test for Python versions 3.5 and below
